リファクタリング：mainの注意対応とRepositoryのJavaDoc